Wait for history backend in popup blocker test

BUG=663333
R=avi@chromium.org

Review-Url: https://codereview.chromium.org/2495053003
Cr-Commit-Position: refs/heads/master@{#431794}

Former-commit-id: 3c6423fb4576679a36f1dbbf547e13fb37eafee2